--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ucentral-libs",
-  "version": "0.8.11",
+  "version": "0.8.12",
   "main": "dist/index.js",
   "source": "src/index.js",
   "engines": {
@@ -19,13 +19,13 @@
     "react-dom": "^17.0.2",
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
+    "sass": "^1.35.1",
     "uuid": "^8.3.2"
   },
   "scripts": {
     "format": "prettier --write 'src/**/*{.js,.scss}'",
     "build": "webpack --mode production",
     "eslint": "eslint 'src/**/*.js'",
-    "watch": "webpack --watch",
     "fix": "eslint --fix 'src/**/*.js'"
   },
   "eslintConfig": {
