--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ucentral-libs",
-  "version": "0.8.29",
+  "version": "0.8.34",
   "main": "dist/index.js",
   "source": "src/index.js",
   "engines": {
@@ -14,6 +14,7 @@
     "@coreui/icons": "^2.0.1",
     "@coreui/icons-react": "^1.1.0",
     "@coreui/react": "^3.4.6",
+    "@coreui/react-chartjs": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
