--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ucentral-libs",
-  "version": "0.8.43",
+  "version": "0.8.49",
   "main": "dist/index.js",
   "source": "src/index.js",
   "engines": {
@@ -21,7 +21,8 @@
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "sass": "^1.35.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "react-tooltip": "^4.2.21"
   },
   "scripts": {
     "format": "prettier --write 'src/**/*{.js,.scss}'",
