--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ucentral-libs",
-  "version": "0.8.57",
+  "version": "0.8.68",
   "main": "dist/index.js",
   "source": "src/index.js",
   "engines": {
@@ -18,8 +18,10 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flow-renderer": "^9.6.6",
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.1",
     "sass": "^1.35.1",
     "uuid": "^8.3.2",
     "react-tooltip": "^4.2.21"
