--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
     "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"],
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-wrap-multilines": "off",
-    "react/jsx-curly-newline": "off"
+    "react/jsx-curly-newline": "off",
+    "no-underscore-dangle": "off"
   },
   "settings": {
     "import/resolver": {
