--- a/babel.config.json
+++ b/babel.config.json
@@ -1,12 +1,25 @@
 {
   "presets": [
-    "@babel/preset-env",
+    [
+      "@babel/preset-env",
+      {
+        "modules": false
+      }
+    ],
     "@babel/preset-react"
   ],
-  "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "transform-react-remove-prop-types",
-    "@babel/plugin-transform-react-inline-elements",
-    "@babel/plugin-transform-react-constant-elements"
-  ]
+  "env": {
+    "production": {
+      "plugins": [
+        "@babel/plugin-transform-react-inline-elements",
+        "@babel/plugin-transform-react-constant-elements",
+        [
+          "transform-react-remove-prop-types",
+          {
+            "removeImport": true
+          }
+        ]
+      ]
+    }
+  }
 }
