--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ucentral-libs",
-  "version": "0.8.78",
+  "version": "0.9.2",
   "main": "dist/index.js",
   "source": "src/index.js",
   "engines": {
@@ -9,27 +9,29 @@
   "files": [
     "dist"
   ],
-  "peerDependencies": {
+  "license" : "BSD-3-Clause",
+  "dependencies": {
     "@coreui/coreui": "^3.4.0",
     "@coreui/icons": "^2.0.1",
     "@coreui/icons-react": "^1.1.0",
     "@coreui/react": "^3.4.6",
     "@coreui/react-chartjs": "^1.1.0",
-    "lodash": "^4.17.21",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-tooltip": "^4.2.21",
     "react-flow-renderer": "^9.6.6",
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-select": "^4.3.1",
-    "sass": "^1.35.1",
     "uuid": "^8.3.2",
-    "react-tooltip": "^4.2.21"
+    "lodash": "^4.17.21"
+  },
+  "peerDependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "format": "prettier --write 'src/**/*{.js,.scss}'",
-    "build": "webpack --mode production",
+    "build": "NODE_ENV=production webpack --mode production",
     "eslint": "eslint 'src/**/*.js'",
     "fix": "eslint --fix 'src/**/*.js'"
   },
