--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ucentral-libs",
-  "version": "0.9.51",
+  "version": "0.9.71",
   "main": "dist/index.js",
   "source": "src/index.js",
   "engines": {
@@ -9,20 +9,22 @@
   "files": [
     "dist"
   ],
-  "license" : "BSD-3-Clause",
+  "license": "BSD-3-Clause",
   "dependencies": {
     "@coreui/coreui": "^3.4.0",
     "@coreui/icons": "^2.0.1",
     "@coreui/icons-react": "^1.1.0",
     "@coreui/react": "^3.4.6",
     "@coreui/react-chartjs": "^1.1.0",
-    "react-tooltip": "^4.2.21",
+    "libphonenumber-js": "^1.9.37",
+    "lodash": "^4.17.21",
     "react-flow-renderer": "^9.6.6",
     "react-paginate": "^7.1.3",
+    "react-phone-input-2": "^2.14.0",
     "react-router-dom": "^5.2.0",
     "react-select": "^4.3.1",
-    "uuid": "^8.3.2",
-    "lodash": "^4.17.21"
+    "react-tooltip": "^4.2.21",
+    "uuid": "^8.3.2"
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
