--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ucentral-libs",
-  "version": "0.9.74",
+  "version": "0.9.78",
   "main": "dist/index.js",
   "source": "src/index.js",
   "engines": {
@@ -32,7 +32,7 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "format": "prettier --write 'src/**/*{.js,.scss}'",
+    "format": "prettier --write \"src/**/*{.js,.scss}\"",
     "build": "set NODE_ENV=production && webpack --mode production",
     "eslint": "eslint 'src/**/*.js'",
     "fix": "eslint --fix 'src/**/*.js'"
@@ -75,6 +75,7 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -83,6 +84,9 @@
     "node-sass": "^5.0.0",
     "path": "^0.12.7",
     "prettier": "^2.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sass": "^1.43.3",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.40.0",
