--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   ],
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@coreui/coreui": "^3.4.0",
-    "@coreui/icons": "^2.0.1",
-    "@coreui/icons-react": "^1.1.0",
-    "@coreui/react": "^3.4.6",
-    "@coreui/react-chartjs": "^1.1.0",
+    "@coreui/coreui": "^4.0.5",
+    "@coreui/icons": "^2.1.0",
+    "@coreui/icons-react": "^2.0.0",
+    "@coreui/react": "^4.0.1",
+    "@coreui/react-chartjs": "^2.0.0",
+    "color-convert": "^1.9.3",
     "libphonenumber-js": "^1.9.37",
     "lodash": "^4.17.21",
     "react-flow-renderer": "^9.6.6",
