--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ucentral-libs",
-  "version": "1.0.44",
+  "version": "1.0.47",
   "main": "dist/index.js",
   "source": "src/index.js",
   "engines": {
@@ -22,6 +22,7 @@
     "react-paginate": "^7.1.3",
     "react-phone-input-2": "^2.14.0",
     "react-router-dom": "^5.2.0",
+    "react-i18next": "^11.11.0",
     "react-select": "^4.3.1",
     "react-tooltip": "^4.2.21",
     "uuid": "^8.3.2"
